export interface Person {
    readonly forename: string;
    readonly surname: string;
}
